fix: add correct flex blocks spacing

--- a/assets/style.css
+++ b/assets/style.css
@@ -24,7 +24,7 @@ img {
 
 .wrapper {
   padding: 20px;
-  max-width: 720px;
+  max-width: 820px;
   margin: 0 auto;
   border: 2px solid lightgray;
   background: url("./bgImgB.jpg") no-repeat center;
@@ -59,7 +59,7 @@ a:hover {
 .wrapper_main {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: space-evenly;
   align-items: flex-start;
 }
 
